# FantasyTyperacer

./: .gitignore  CMakeLists.txt  README.txt  Rooms.cpp  bardic.txt  combat.cpp  combat.h  item.cpp  item.h  lyrics1.txt  main.cpp  menus.cpp  menus.h  roomManager.cpp  roomManager.h  rooms.cpp  rooms.h
Art/: winText.txt
Art/enemyPortraits/: dragon.txt
characterCode/: Player.cpp  Player.h  character.cpp  character.h  dragon.cpp  dragon.h  enemy.cpp  enemy.h  goblin.cpp  goblin.h  skeleton.cpp  skeleton.h
data/: PlayerData.txt
descriptions/enemyDescriptions/: dragonDescription.txt  goblinDescription.txt  skeletonDescription.txt
descriptions/roomDescriptions/enemyRooms/: enemyRoomDescription1
descriptions/roomDescriptions/lootRooms/: lootRoomDescription1
items/: Equippable.cpp  Equippable.h  accPotion.cpp  accPotion.h  allItems.h  armor.cpp  armor.h  bigHpPotion.cpp  bigHpPotion.h  consumable.cpp  consumable.h  divineSword.cpp  divineSword.h  dragonArmor.cpp  dragonArmor.h  dungeonMastersSpear.cpp  dungeonMastersSpear.h  hpPotion.cpp  hpPotion.h  item.cpp  item.h  rasmusStick.cpp  rasmusStick.h  shinyStone.cpp  shinyStone.h  weapon.cpp  weapon.h
items/Consumables/: accuracyPotion.txt  bigHealingPotion.txt  consumables.txt  healingPotion.txt  shinyStone.txt
items/Equippables/: divineSword.txt  dragonArmor.txt  dungeonMastersSpear.txt  equippables.txt  rasmusStick.txt
lyrics/: lyrics1.txt  lyrics2.txt
